[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
license = "Apache-2.0"
publish = false
name = "polkadot-crypto"
version = "1.0.0"

[[bin]]
name = "polkadot-crypto"
path = "src/main.rs"

[dependencies]
backtrace = "0.3.38"
blake2-rfc = "0.2.18"
byteorder = "1.3.1"
ed25519-dalek = { version = "1.0.0-pre.4", features = ["nightly"] }
hmac = "0.7.0"
# libsecp256k1 = "0.2.2"
pbkdf2 = { version = "0.3.0", default-features = false }
schnorrkel = { version = "0.9.1", features = ["nightly", "preaudit_deprecated", "u64_backend"] }
scrypt = { version = "0.2", default-features = false }
sha2 = "0.8.1"
tiny-bip39 = { version = "0.7", default-features = false }
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
twox-hash = "1.5.0"
wasm-bindgen = "=0.2.65"
wee_alloc = "0.4.3"

[dev-dependencies]
hex-literal = "0.2.0"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
